[package]
name = "foxtangopapa"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive", "wrap_help", "color"] }
libunftp = "0.21.0"
pretty_env_logger = "0.5.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
unftp-sbe-fs = "0.3.0"
